--- a/DiandianIOS/DiandianIOS/DAMyTableViewCell.xib
+++ b/DiandianIOS/DiandianIOS/DAMyTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -15,16 +15,14 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sample-table.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Edt-Gx-nOD">
-                        <rect key="frame" x="0.0" y="20" width="189" height="180"/>
+                        <rect key="frame" x="4" y="20" width="181" height="175"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </imageView>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="当前状态" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T0Z-mI-FyV">
-                        <rect key="frame" x="20" y="38" width="92" height="21"/>
+                    <view alpha="0.39999999999999963" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="E9P-WB-nf7">
+                        <rect key="frame" x="4" y="20" width="181" height="175"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                        <color key="textColor" red="0.9407194257" green="0.0" blue="0.066420981370000007" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                    </view>
                     <view clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qxb-7k-jMP">
                         <rect key="frame" x="45" y="9" width="98" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -44,8 +42,9 @@
             <size key="customSize" width="189" height="200"/>
             <connections>
                 <outlet property="imgTable" destination="Edt-Gx-nOD" id="wC8-Gl-0eM"/>
-                <outlet property="tableState" destination="T0Z-mI-FyV" id="VAV-OA-Yd6"/>
                 <outlet property="tableTitle" destination="aUb-p6-ecs" id="z6E-na-LQn"/>
+                <outlet property="viewLabel" destination="Qxb-7k-jMP" id="Hws-ri-gVG"/>
+                <outlet property="viewMask" destination="E9P-WB-nf7" id="HHn-Gt-gj1"/>
             </connections>
         </collectionViewCell>
     </objects>
