--- a/DiandianIOS/DiandianIOS/en.lproj/DAOrderCell.xib
+++ b/DiandianIOS/DiandianIOS/en.lproj/DAOrderCell.xib
@@ -7,32 +7,28 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DAOrderCell"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DAOrderCell" id="il4-qN-Nhg" customClass="DAOrderCell">
-            <rect key="frame" x="0.0" y="0.0" width="120" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DAOrderCell" rowHeight="73" id="il4-qN-Nhg" customClass="DAOrderCell">
+            <rect key="frame" x="0.0" y="0.0" width="120" height="73"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="il4-qN-Nhg" id="AJ3-dz-n6k">
-                <rect key="frame" x="0.0" y="0.0" width="120" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="120" height="72"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" clipsSubviews="YES" tag="11" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="宫爆鸡丁" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="LQt-AR-gej">
-                        <rect key="frame" x="26" y="11" width="120" height="21"/>
+                        <rect key="frame" x="40" y="23" width="120" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" tag="122" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chazi.jpg" id="iae-2F-KtK">
-                        <rect key="frame" x="2" y="11" width="20" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="虚线.png" id="bY0-Uj-vU5">
-                        <rect key="frame" x="0.0" y="28" width="120" height="22"/>
+                        <rect key="frame" x="0.0" y="56" width="120" height="22"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
                     <button opaque="NO" tag="123" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="nhf-Dh-4uc" customClass="DAOrderAddAmountBtn">
-                        <rect key="frame" x="2" y="11" width="20" height="21"/>
+                        <rect key="frame" x="0.0" y="15" width="37" height="37"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <state key="normal" title="Button" image="chazi.jpg">
+                        <state key="normal" title="Button" image="chazi1.png">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
@@ -41,7 +37,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="chazi.jpg" width="214" height="220"/>
+        <image name="chazi1.png" width="214" height="220"/>
         <image name="虚线.png" width="1024" height="20"/>
     </resources>
 </document>
